--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="css/_main.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/react-day-picker/lib/style.css">
 </head>
 <html>
 	<body>
